After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 741279 - qtmux: generating corrupted file when over 4GB
qtmux: generating corrupted file when over 4GB
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal critical
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-12-09 02:06 UTC by Matej Knopp
Modified: 2014-12-10 22:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (892 bytes, patch)
2014-12-09 02:06 UTC, Matej Knopp
committed Details | Review

Description Matej Knopp 2014-12-09 02:06:55 UTC
Created attachment 292342 [details] [review]
Patch

See patch
Comment 1 Thiago Sousa Santos 2014-12-10 21:54:59 UTC
commit 2505e343b1cb29541e60afa3418c21b08ded3981
Author: Matej Knopp <matej.knopp@gmail.com>
Date:   Tue Dec 9 02:43:00 2014 +0100

    qtmux: use 64bit chunk_offset
    
    https://bugzilla.gnome.org/show_bug.cgi?id=741279
Comment 2 Tim-Philipp Müller 2014-12-10 22:03:37 UTC
In future please also try to use a commit message summary that says what it actually fixes. "use guint64 for chunk_offset" is pretty much meaningless for the casual observer or even packager, while "don't generate broken files when file size exceeds 4GB" or somesuch would've been a much better description :)
Comment 3 Matej Knopp 2014-12-10 22:09:51 UTC
Sorry, will do :)