qtmux: use 64bit chunk_offset

https://bugzilla.gnome.org/show_bug.cgi?id=741279